@@ -51,6 +51,8 @@ Ver.5.4 (in development)
 - [BUG FIX] Enrolment methods had a bug in case of FileMaker Server with issuedhash for SQLite.
 - [BUG FIX] When the text field bond to local context didn't update calculated property.
 - [BUG FIX] Authentication prevented in case of just specify on the second parameter of IM_Entry.
+- [BUG FIX] Fix DB_FileMaker_FX class not to throw an exception when failed to convert a value 
+  using DataConverter classes.
 
 Ver.5.3 (February 21, 2016)
 - Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
